GPF-1037 GRR tests restored into working state

--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_scores/hg19/MPC/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_scores/hg19/MPC/genomic_resource.yaml
@@ -11,7 +11,7 @@ index_file:
   filename: CADD.bedgraph.gz.tbi
   format: tabix
 
-has_header: false
+has_header: true
 
 type_aggregators:
   - type: float
