--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/CONTENT.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/CONTENT.yaml
@@ -8,6 +8,11 @@ children:
     type: resource
   - id: hg19/phastCons100
     type: resource
+  - id: hg19/GATK_ResourceBundle_5777_b37_phiX174
+    type: group
+    children:
+    - id: hg19/GATK_ResourceBundle_5777_b37_phiX174/genome
+      type: resource
   - id: hg19/CADD
     type: resource
 - id: hg38
