GPF-1055 reorganization of genomic sequence resource

--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/GATK_ResourceBundle_5777_b37_phiX174/genome/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/GATK_ResourceBundle_5777_b37_phiX174/genome/genomic_resource.yaml
@@ -10,6 +10,14 @@ index_file:
 
 chrom_prefix: ""
 
+PARS:
+  "X":
+    - "X:60001-2699520"
+    - "X:154931044-155260560"
+  "Y":
+    - "Y:10001-2649520"
+    - "Y:59034050-59363566"
+
 meta: |
   ## HG19 Reference Genome 
 
