GPF-1066 Finish generation of score statistics

--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTphastCons100way/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTphastCons100way/genomic_resource.yaml
@@ -42,3 +42,9 @@ default_annotation:
       dest: phastCons100way
       aggregator:
         position: MaxAggregator
+      histogram:
+        bins_count: 10
+        x_min: 0
+        x_max: 1
+        x_scale: linear
+        y_scale: linear
