--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/CONTENT.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/CONTENT.yaml
@@ -4,10 +4,6 @@ children:
 - id: hg19
   type: group
   children:
-  - id: hg19/MPC
-    type: resource
-  - id: hg19/phastCons100
-    type: resource
   - id: hg19/GATK_ResourceBundle_5777_b37_phiX174
     type: group
     children:
@@ -20,13 +16,13 @@ children:
         type: resource
   - id: hg19/CADD
     type: resource
+  - id: hg19/phastCons100
+    type: resource
+  - id: hg19/MPC
+    type: resource
 - id: hg38
   type: group
   children:
-  - id: hg38/TESTCADD
-    type: resource
-  - id: hg38/TESTphastCons100way
-    type: resource
   - id: hg38/GRCh38-hg38
     type: group
     children:
@@ -37,5 +33,11 @@ children:
       children:
       - id: hg38/GRCh38-hg38/gene_models/refSeq_20200330
         type: resource
+  - id: hg38/hg38tohg19
+    type: resource
   - id: hg38/TESTFreq
+    type: resource
+  - id: hg38/TESTCADD
+    type: resource
+  - id: hg38/TESTphastCons100way
     type: resource
