GPF-1183 Update genomic resources test repo

--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/CONTENT.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/CONTENT.yaml
@@ -37,6 +37,8 @@ children:
     type: resource
   - id: hg38/TESTFreq
     type: resource
+  - id: hg38/TESTPosAgg
+    type: resource
   - id: hg38/TESTCADD
     type: resource
   - id: hg38/TESTphastCons100way
