--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/GRCh38-hg38/gene_models/refSeq_20200330/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/GRCh38-hg38/gene_models/refSeq_20200330/genomic_resource.yaml
@@ -1,6 +1,4 @@
-id: hg38/GRCh38-hg38/gene_models/refSeq_20200330
-
-resource_type: gene_models_resource.GeneModelsResource
+type: GeneModels 
 
 filename: refSeq_20200330.txt
 
