--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/GATK_ResourceBundle_5777_b37_phiX174/gene_models/refGene_201309/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/GATK_ResourceBundle_5777_b37_phiX174/gene_models/refGene_201309/genomic_resource.yaml
@@ -1,6 +1,4 @@
-id: hg19/GATK_ResourceBundle_5777_b37_phiX174/gene_models/refGene_201309
-
-resource_type: gene_models_resource.GeneModelsResource
+type: GeneModels 
 
 filename: refGene201309.txt
 
