--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/hg38tohg19/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/hg38tohg19/genomic_resource.yaml
@@ -1,7 +1,3 @@
----
+type: LiftoverChain
 
-id: hg38/hg38tohg19
-
-resource_type: liftover_resource.LiftoverChainResource
-
-filename: hg38ToHg19.over.chain.gz
+file: hg38ToHg19.over.chain.gz
