--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/hg38tohg19/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/hg38tohg19/genomic_resource.yaml
@@ -5,3 +5,8 @@ id: hg38/hg38tohg19
 resource_type: liftover_resource.LiftoverChainResource
 
 filename: hg38ToHg19.over.chain.gz
+
+chrom_prefix:
+  target_coordinates:
+    del_prefix: "chr"
+
