--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/hg38tohg19/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/hg38tohg19/genomic_resource.yaml
@@ -2,6 +2,9 @@ type: LiftoverChain
 
 file: hg38ToHg19.over.chain.gz
 
+chrom_prefix.target_coordinates:
+  del_prefix: chr
+
 # id: hg38/hg38tohg19
 
 # resource_type: liftover_resource.LiftoverChainResource
