--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/GATK_ResourceBundle_5777_b37_phiX174/genome/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/GATK_ResourceBundle_5777_b37_phiX174/genome/genomic_resource.yaml
@@ -1,6 +1,6 @@
 type: Genome 
 
-file: chrAll.fa
+filename: chrAll.fa
 
 chrom_prefix: ""
 
@@ -13,6 +13,6 @@ PARS:
     - "Y:59034050-59363566"
 
 meta: |
-  ## HG19 Reference Genome 
+  ## HG19 Reference Genome Fragment
 
   Default HG19 reference genome used by GPF
