--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/GRCh38-hg38/genome/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/GRCh38-hg38/genome/genomic_resource.yaml
@@ -1,6 +1,6 @@
 type: Genome 
 
-file: GRCh38_full_analysis_set_plus_decoy_hla.fa
+filename: GRCh38_full_analysis_set_plus_decoy_hla.fa
 
 chrom_prefix: ""
 
