--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/internal/scores_incomplete_coverage/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/internal/scores_incomplete_coverage/genomic_resource.yaml
@@ -2,16 +2,20 @@
 
 id: hg19/internal/scores_incomplete_coverage
 
-resource_type: score_resources.PositionScoreResource
+type: PositionScore
 
-filename: scores_incomplete_coverage.tsv.gz
-format: tsv/bgz
-
-index_file:
-  filename: scores_incomplete_coverage.tsv.gz.tbi
+table:
+  filename: scores_incomplete_coverage.tsv.gz
   format: tabix
 
-has_header: true
+  # defined by score_type
+  chrom: 
+    name: CHROM
+  pos_begin:
+    name: POS
+  pos_end: 
+    name: POS
+
 
 type_aggregators:
   - type: float
@@ -20,14 +24,6 @@ type_aggregators:
     aggregator: dae.genomic_resource.aggregators.MaxAggregator
   - type: str
     aggregator: dae.genomic_resource.aggregators.ConcatAggregator
-
-# defined by score_type
-chrom: 
-  name: CHROM
-pos_begin:
-  name: POS
-pos_end: 
-  name: POS
 
 # score values
 scores:
