--- a/dae/dae/common_reports/tests/fixtures/gpf_instance.yaml
+++ b/dae/dae/common_reports/tests/fixtures/gpf_instance.yaml
@@ -1,6 +1,12 @@
 vars:
   wd: "."
 
+reference_genome:
+  resource_id: "hg19/GATK_ResourceBundle_5777_b37_phiX174/genome"
+
+gene_models:
+  resource_id: "hg19/GATK_ResourceBundle_5777_b37_phiX174/gene_models/refGene_v201309"
+
 genotype_storage:
   default: genotype_filesystem
 
@@ -25,9 +31,6 @@ default_study_config:
 
 gene_info_db:
   conf_file: "%(wd)s/gene_info.conf"
-
-genomes_db:
-  conf_file: "%(wd)s/genomesDB.conf"
 
 genomic_scores_db:
   conf_file: "%(wd)s/genomicScores.conf"
