GPF-1314 reorganization of annotation configuration

--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTFreq/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTFreq/genomic_resource.yaml
@@ -33,7 +33,7 @@ scores:
 default_annotation:
   attributes:
     - source: altFreq
-      dest: alt_freq
+      destination: alt_freq
 
     - source: altFreq2
-      dest: alt_freq2
+      destination: alt_freq2
