--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/internal/scores1/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/internal/scores1/genomic_resource.yaml
@@ -34,13 +34,13 @@ scores:
 default_annotation:
   attributes:
     - source: score0
-      dest: score0
+      destination: score0
       position_aggregator: max
 
     - source: score2
-      dest: score2
+      destination: score2
       position_aggregator: max
 
     - source: score4
-      dest: score4
+      destination: score4
       position_aggregator: max
