--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/internal/scores_incomplete_coverage/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/internal/scores_incomplete_coverage/genomic_resource.yaml
@@ -25,5 +25,5 @@ scores:
 default_annotation:
   attributes:
     - source: score0_incomplete_cov
-      dest: score0_incomplete_cov
+      destination: score0_incomplete_cov
       position_aggregator: max
