--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTphastCons100way/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTphastCons100way/genomic_resource.yaml
@@ -47,6 +47,5 @@ histogram:
 default_annotation:
   attributes:
     - source: phastCons100way
-      dest: phastCons100way
-      aggregator:
-        position: MaxAggregator
+      destination: phastCons100way
+      position_aggregator: MaxAggregator
