--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTPosAgg/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTPosAgg/genomic_resource.yaml
@@ -18,15 +18,6 @@ table:
     index: 2
 
 
-type_aggregators:
-  - type: float
-    aggregator: dae.genomic_resource.aggregators.MaxAggregator
-  - type: int
-    aggregator: dae.genomic_resource.aggregators.MaxAggregator
-  - type: str
-    aggregator: dae.genomic_resource.aggregators.ConcatAggregator
-
-
 # score values
 scores:
     - id: test_score
@@ -38,6 +29,5 @@ scores:
 default_annotation:
   attributes:
     - source: test_score
-      dest: test_score
-      aggregator:
-        position: MeanAggregator
+      destination: test_score
+      position_aggregator: mean
