--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/internal/scores_incomplete_coverage/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/internal/scores_incomplete_coverage/genomic_resource.yaml
@@ -1,8 +1,6 @@
 ---
 
-id: hg19/internal/scores_incomplete_coverage
-
-type: PositionScore
+type: position_score
 
 table:
   filename: scores_incomplete_coverage.tsv.gz
