GPF-1339 liftover resource config more flexible

--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/hg38tohg19/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/hg38tohg19/genomic_resource.yaml
@@ -1,6 +1,6 @@
 type: liftover_chain
 
-file: hg38ToHg19.over.chain.gz
+filename: hg38ToHg19.over.chain.gz
 
 chrom_prefix.target_coordinates:
   del_prefix: chr
