GPF-1339 fix liftover test resource configuration

--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/hg38tohg19/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/hg38tohg19/genomic_resource.yaml
@@ -2,16 +2,6 @@ type: liftover_chain
 
 filename: hg38ToHg19.over.chain.gz
 
-chrom_prefix.target_coordinates:
-  del_prefix: chr
-
-# id: hg38/hg38tohg19
-
-# resource_type: liftover_resource.LiftoverChainResource
-
-# filename: hg38ToHg19.over.chain.gz
-
-# chrom_prefix:
-#   target_coordinates:
-#     del_prefix: "chr"
-
+chrom_prefix:
+  target_coordinates:
+    del_prefix: chr
