GPF-1624 Update genomic scores to map to source

--- a/dae_conftests/dae_conftests/tests/fixtures/test_repo/genomic_scores/test_scores/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/test_repo/genomic_scores/test_scores/genomic_resource.yaml
@@ -22,3 +22,11 @@ histograms:
     bins: 101
     yscale: "log"
     xscale: "linear"
+default_annotation:
+  attributes:
+    - source: score_raw_rankscore
+      destination: score_raw_rankscore
+    - source: score_raw
+      destination: score_raw
+    - source: score_phred
+      destination: score_phred
