GPF-1683 Update fixtures

--- a/dae_conftests/dae_conftests/tests/fixtures/test_repo/gene_scores/RVIS/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/test_repo/gene_scores/RVIS/genomic_resource.yaml
@@ -1,8 +1,18 @@
 type: gene_score
-id: RVIS
-filename: RVIS.csv
-desc: RVIS
-histogram:
-  bins: 150
-  xscale: linear
-  yscale: log
+gene_scores:
+  - id: RVIS_rank
+    filename: RVIS.csv
+    desc: RVIS rank
+  - id: RVIS
+    filename: RVIS.csv
+    desc: RVIS
+
+histograms:
+  - score: RVIS_rank
+    bins: 150
+    xscale: linear
+    yscale: linear
+  - score: RVIS
+    bins: 150
+    xscale: linear
+    yscale: log
