GPF-1683 Fix tests

--- a/dae_conftests/dae_conftests/tests/fixtures/test_repo/gene_scores/RVIS/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/test_repo/gene_scores/RVIS/genomic_resource.yaml
@@ -10,9 +10,9 @@ gene_scores:
 histograms:
   - score: RVIS_rank
     bins: 150
-    xscale: linear
-    yscale: linear
+    x_scale: linear
+    y_scale: linear
   - score: RVIS
     bins: 150
-    xscale: linear
-    yscale: log
+    x_scale: linear
+    y_scale: log
