--- a/dae_conftests/dae_conftests/tests/fixtures/test_repo/genomic_scores/test_scores/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/test_repo/genomic_scores/test_scores/genomic_resource.yaml
@@ -12,16 +12,16 @@ scores:
 histograms:
   - score: score_raw_rankscore
     bins: 101
-    yscale: "log"
-    xscale: "linear"
+    y_scale: "log"
+    x_scale: "linear"
   - score: score_raw
     bins: 101
-    yscale: "log"
-    xscale: "linear"
+    y_scale: "log"
+    x_scale: "linear"
   - score: score_phred
     bins: 101
-    yscale: "log"
-    xscale: "linear"
+    y_scale: "log"
+    x_scale: "linear"
 default_annotation:
   attributes:
     - source: score_raw_rankscore
