--- a/dae/dae/gene/tests/fixtures/gpf_instance.yaml
+++ b/dae/dae/gene/tests/fixtures/gpf_instance.yaml
@@ -7,10 +7,8 @@ gene_models:
 
 genotype_storage:
   default: genotype_filesystem
-
-storage:
-
-  genotype_filesystem:
+  storages:
+  - id: genotype_filesystem
     dir: "studies"
     storage_type: filesystem
 
