VcfInfoResource should have configuration for available scores.
We need to have this information without looking into the large
resource files.

WIP #278.

--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/clinvar/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/clinvar/genomic_resource.yaml
@@ -5,5 +5,12 @@ type: vcf_info
 filename: clinvar.vcf.gz
 index_filename: clinvar.vcf.gz.tbi
 
+scores:
+- id: ALLELEID
+  type: int
+
+- id: GENEINFO
+  type: str
+
 meta: |
   TODO
