Remove outdated VcfInfoScore resource and update unit tests

--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/clinvar/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/clinvar/genomic_resource.yaml
@@ -1,16 +1,9 @@
 ---
 
-type: vcf_info
-
-filename: clinvar.vcf.gz
-index_filename: clinvar.vcf.gz.tbi
-
-scores:
-- id: ALLELEID
-  type: int
-
-- id: GENEINFO
-  type: str
+type: allele_score
+table:
+  filename: clinvar.vcf.gz
+  index_filename: clinvar.vcf.gz.tbi
 
 meta: |
   TODO
