Further work on genome position tables and annotation

--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTFreq/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTFreq/genomic_resource.yaml
@@ -13,9 +13,9 @@ table:
     name: chr
   pos_begin:
     name: position
-  ref:
+  reference:
     name: ref
-  alt:
+  alternative:
     name: alt
 
 # score values
