More unit test fixes for updated GenomicPositionTable

--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/MPC/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/MPC/genomic_resource.yaml
@@ -23,6 +23,13 @@ table:
         desc: ""
         name: MPC
 
+histograms:
+  - score: MPC
+    bins: 100
+    min: 0.0
+    max: 5.0
+    y_scale: "log"
+
 default_annotation:
   attributes:
     - source: MPC
