Fix test resource configs

--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/GATK_ResourceBundle_5777_b37_phiX174_short/genome/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/GATK_ResourceBundle_5777_b37_phiX174_short/genome/genomic_resource.yaml
@@ -12,7 +12,9 @@ PARS:
     - "Y:10001-2649520"
     - "Y:59034050-59363566"
 
-meta: |
-  ## HG19 Reference Genome Fragment
+meta: 
+  description: |
+    ## HG19 Reference Genome Fragment
 
-  Default HG19 reference genome used by GPF
+    Default HG19 reference genome used by GPF
+  labels: ~
