--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/GRCh38-hg38/gene_models/refSeq_20200330/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/GRCh38-hg38/gene_models/refSeq_20200330/genomic_resource.yaml
@@ -5,7 +5,9 @@ filename: refSeq_20200330.txt
 format: "refseq"
 
 
-meta: |
-  ## refSeq gene models for HG38 from 2020-03
+meta:
+  description: |
+    ## refSeq gene models for HG38 from 2020-03
 
-  Default gene models used by GPF for HG38.
+    Default gene models used by GPF for HG38.
+  labels: ~
