--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/GATK_ResourceBundle_5777_b37_phiX174_short/gene_models/refGene_201309/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/GATK_ResourceBundle_5777_b37_phiX174_short/gene_models/refGene_201309/genomic_resource.yaml
@@ -5,7 +5,9 @@ filename: refGene201309.txt
 format: "default"
 
 
-meta: |
-  ## refGene gene models from 2013-09
+meta:
+  description: |
+    ## refGene gene models from 2013-09
 
-  Old gene models used by GPF up to 2019-02.
+    Old gene models used by GPF up to 2019-02.
+  labels: ~
