Update genomic scores to contain only 1 type of histogram

--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTphastCons100way/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTphastCons100way/genomic_resource.yaml
@@ -18,7 +18,8 @@ scores:
     desc: "phastCons100way"
     position_aggregator: max
     index: 3
-    number_hist:
+    histogram:
+      type: number
       number_of_bins: 10
       view_range:
         min: 0.0
