--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/MPC/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/MPC/genomic_resource.yaml
@@ -22,7 +22,8 @@ scores:
     type: float
     desc: ""
     name: MPC
-    number_hist:
+    histogram:
+      type: number
       number_of_bins: 100
       view_range:
         min: 0.0
